find_package(Threads REQUIRED)
MESSAGE("--- Tests aren't built with CMake")
#find_package(CppUnit REQUIRED)
#
#file(GLOB_RECURSE TESTRUNNER_SOURCE_FILES *.cpp)
#
#ADD_EXECUTABLE(testrunner ${TESTRUNNER_SOURCE_FILES})
#TARGET_LINK_LIBRARIES(testrunner json_cpp ${CMAKE_THREAD_LIBS_INIT} ${CPPUNIT_LIBRARY}) 
